# OrganicWar

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  debug_browser.js  debug_esc.mjs  docker-compose.yml  ecosystem.config.cjs  implementation.md  na_map.txt  na_map_zoomed.txt  package-lock.json  package.json  render.yaml  vite.config.js
scripts/: check-build-env.mjs
server/: auth.js  conqueror.db-shm  database.js  email.js  migrate.js  server.js
server/game/: gameLoop.js  roomManager.js  simulationRunner.js  simulationWorker.js  socketHandlers.js  state.js
server/migrations/: 001_initial_schema.sql  002_add_guild_losses.sql  003_oauth_and_reset.sql  004_guild_requests.sql  005_email_verification.sql
server/routes/: apiRoutes.js  authRoutes.js  guilds.js
server/utils/: contentFilter.js  logger.js  rateLimiter.js
simulation-core/: Cargo.toml
simulation-core/src/: lib.rs
src/: index.html  main.js  reset-password.html  style.css
src/js/: auth.js  authUI.js  constants.js  dom.js  escape.js  feedbackUI.js  guildUI.js  helpers.js  initDOM.js  mapGen.js  network.js  rankingsUI.js  renderer.js  simBridge.js  state.js
src/js/components/: gameUITemplate.js  guildTemplate.js  homeTemplate.js  lobbyTemplate.js  modalsTemplate.js
src/public/: robots.txt  sitemap.xml
src/styles/: auth.css  base.css  game.css  guilds.css  modals.css  shop.css
